--- a/BackEnd/KoloroweWeb/KoloroweWeb.csproj
+++ b/BackEnd/KoloroweWeb/KoloroweWeb.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KoloroweWeb.Data\KoloroweWeb.Data.csproj" />
+  </ItemGroup>
+
 </Project>
