--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,53 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
+.vs/
+
+# Ignore Visual Studio specific files and folders
+.vs/
+.vscode/
+*.cache
+bin/
+obj/
+
+# Ignore build files and directories
+*.user
+*.userosscache
+*.suo
+*.sln.docstates
+
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+
+# Visual Studio Code
+.vscode
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+msbuild.log
+msbuild.err
+msbuild.wrn
+
+# Visual Studio 2015
+.vs/
 
 /IOPTNetwork/Primary/ION.App.sln
 /EZDental-s
