--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
+    "vue2-editor": "^2.10.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
