--- a/BackEnd/KoloroweWeb/KoloroweWeb.csproj
+++ b/BackEnd/KoloroweWeb/KoloroweWeb.csproj
@@ -24,11 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+	  <Folder Include="Entities\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KoloroweWeb.Data\KoloroweWeb.Data.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 </Project>
