--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
     "vue3-editor": "^0.1.1",
